# _TNTNT

./: .gitignore  Cargo.toml  README-en_US.md  README.md  build.rs
Chun Jie Xu Qu/: Chun Jie Xu Qu.tja
System/: README.md
System/SimpleStyle/: README.md
charts/恋のうた (feat. 由崎司)/: 恋のうた (feat. 由崎司).tja
i18n/: Cargo.toml
i18n/src/: lib.rs
resources/images/: lane.xml  visualizer.xml
resources/images/lane/: lane.json
resources/images/notes/: notes.json
src/: audio.rs  main.rs  test.rs  tja.rs  visualizer.rs
src/application/: audio.rs  conf.rs  mod.rs
src/application/resources/: mod.rs  sounds.rs
src/conf/: mod.rs
src/configurations/resources/images/: lane.rs  mod.rs  notes.rs
src/i18n/: mod.rs
src/loaders/: load_tja.rs  mod.rs
src/player/: mod.rs
src/player/resources/: mod.rs  sound.rs  sounds.rs
src/test/: load.rs  mod.rs  play.rs
src/tja/: mod.rs  parse.rs
src/tja/course/: branch.rs  event.rs  mod.rs
src/tja/course/event/: branch.rs  mod.rs  nextsong.rs
src/tja/course/meta/: course.rs  course_name.rs  exam.rs  mod.rs  style.rs
src/tja/meta/: mod.rs  score_mode.rs
tja/: Cargo.toml
tja/src/: lib.rs  parse.rs
tja/src/course/: mod.rs
tja/src/course/event/: mod.rs
tja/src/course/meta/: course_name.rs  difficulty.rs  mod.rs
tja/src/event/: branch.rs  context.rs  event_type.rs  mod.rs  next_song.rs
tja/src/meta/: mod.rs  scoremode.rs
