[package]
name = "tntnt"
version = "0.1.0"
authors = ["WHMHammer <whmhammer@gmail.com>"]
edition = "2021"
description = "Yet another .tja player"
readme = "README.md"
repository = "https://github.com/WHMHammer/TNTNT"
license-file = "LICENSE.md"
keywords = ["taiko-no-tatsujin", "tja"]
categories = ["games"]

[dependencies]
encoding_rs = "*"
rodio = "*"
