[package]
name = "tntnt"
version = "0.1.1"
authors = ["WHMHammer <whmhammer@gmail.com>"]
edition = "2021"
description = "Yet another .tja player"
readme = "README.md"
repository = "https://github.com/WHMHammer/TNTNT"
license-file = "LICENSE.md"
keywords = ["taiko-no-tatsujin", "tja"]
categories = ["games"]

[dependencies]
i18n = { package = "tntnt-i18n", path = "i18n" }
serde_json = "*"
tja = { package = "tntnt-tja", path = "tja" }

rodio = { version = "*" }
