[package]
name = "tntnt-tja"
version = "1.0.0"
authors = ["WHMHammer <whmhammer@gmail.com>"]
edition = "2021"
description = ".tja structs and parser"
repository = "https://github.com/WHMHammer/TNTNT/tree/main/tja"
license-file = "../LICENSE.md"
keywords = ["taiko-no-tatsujin", "tja"]
categories = ["games"]

[dependencies]
i18n = { package = "tntnt-i18n", path = "../i18n" }

encoding_rs = "*"
